<resources>
    <string name="app_name">Proba3</string>
    <string name="title_activity_maps">GasItApp</string>
    <string name="Tytul">GasItApp</string>
    <string name="geolocalizator">Tryb sledzenia</string>
    <string name="normal_map">Mapa normalna</string>
    <string name="terrain_map">Mapa terenowa</string>
    <string name="satellite_map">Mapa satelitarna</string>
    <string name="Hybrid">Mapa hybrydowa</string>
    <string name="fuel_choose">Wybór paliwa</string>
    <string name="ok">OK</string>
    <!--  Paliwa -->
    <string name="fuel_lpg">LPG</string>
    <string name="fuel_pb95">Pb95</string>
    <string name="fuel_pb98">Pb98</string>
    <string name="fuel_on">ON</string>

    <string name="api_url">https://script.google.com/macros/s/AKfycbwi_fjw8oLX5gYWuPmukORIFkV4S-hzJRqBlIFngtLCq7uE5j4/exec</string>

</resources>
