<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/choose_gas_type"
        android:icon="@drawable/fuel"
        android:title="@string/fuel_choose"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/lokalizator"
        android:title="@string/geolocalizator"

        />

    <item
     android:id="@+id/Normal"
        android:title="@string/normal_map"
   />
    <item
        android:id="@+id/Terrain"
        android:title="@string/terrain_map"
    />
    <item
        android:id="@+id/Satellite"
        android:title="@string/satellite_map"
        />
    <item
        android:id="@+id/Hybrid"
        android:title="@string/Hybrid"
        />

</menu>